2011-06-26 Jan Gehring <jan.gehring, gmail.com> (0.8.0)
  * added mageia support for services and packages

2011-06-25 Jan Gehring <jan.gehring, gmail.com> (0.7.1)
  * restored the backward compatibility with perl 5.8.x
  * suppress warning if no parameter is given

2011-06-23 Jan Gehring <jan.gehring, gmail.com> (0.7.0)
  * preload a lot more default modules
  * added new functions (df, du, cp)
  * added some aliases (ln, cp, cd, ls)
  * added process management functions (kill, killall, nice, ps)
  * splitted out rex-agent and rex-master.

2011-06-19 Jan Gehring <jan.gehring, gmail.com> (0.6.1)
  * fixed documentation bugs (thanks to djill)
  * fixed #68827, rewrote is_readable/is_writable
  * handle auth failure correctly
  * mkdir now created directories recursive
